# elimunasi

./: .gitignore  Cargo.toml  ElimuNasi.toml  LICENSE  Makefile.toml  README.md  Rocket.toml  deny.toml  history.txt  todo.md
assets/js/: bottom-menu.js
assets/tinymce/: tinymce.min.js  tinymce_init.js
backend/: Cargo.toml  Makefile.toml
backend/resources/: index.html
backend/src/: main.rs
backend/src/routes/: admin.rs  mod.rs  staff.rs  student.rs
src/: errors.rs  global.rs  lib.rs
webapp/: Cargo.toml  Makefile.toml
webapp/assets/styles/: base.css  main.css  quill.snow.css
webapp/resources/styles/: frow.css  helpers.css  main.css
webapp/src/: app.rs  lib.rs  ping.rs  routes.rs
webapp/src/pages/: credentials.rs  home.rs  mod.rs
webapp/src/routes/: app.rs  credentials.rs  mod.rs
