[package]
name = "en_client"
version = "0.2.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"

license = "Copyright 2019. All Rights Reserved"

[dependencies]

#API
rocket = "0.4.2"
serde = "1.0.82"
serde_derive = "1.0.82"
rand = "0.6.5"
chrono = { version = "0.4.6", features = ["serde"] }
indexmap = { version = "1.0", features = ["serde-1"] }
custom_codes = "1.0.3"
schemeguardian = "0.1.0-alpha.2"
aho-corasick = "0.7.4"
enquote = "1.0.3"
passphrase_lib = "1.0.3"
rusty_ulid = "0.9.0"
secrecy = "0.2.2"
zeroize = "0.9.3"
failure = "0.1.5"
bincode = "1.1.4"
either = "1.5.2"

#TEMPLATES
maud = { version = "0.20.0", features = ["rocket"] }

#DB
reql = "0.0.26"
reql-types = "0.0.4"
reql-macros = "0.0.19"
futures = "0.1.25"

#I/O
toml = "0.5.0"
lazy_static = "1.3.0"
heck = "0.3.1"
serde_json = "1.0.40"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = [
 "serde",
 "serve",
 "json",
 "helmet",
]

[dependencies.validators]
version = "0.20.14"
features = ["rocketly"]
