[package]
name = "elimunasi"
version = "0.2.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"

license = "Copyright 2019. All Rights Reserved"

[workspace]
members = [
    "backend",
    "webapp",
]

[[bin]]
name = "backend"
#test = true
#bench = false
#required-features = []
path = "./backend/src/main.rs"