[package]
name = "backend"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
license = "LicenseRef-ElimuNasi-Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
smol = "1.2.4"
tide = "0.15.0"
tide-compress = "0.8.1"
tide-tracing = "0.0.7"
