[package]
name = "webapp"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
license = "LicenseRef-ElimuNasi-Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.34"
mogwai = "0.3.4"
wasm-bindgen = "0.2.68"
