[package]
name = "webapp"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
license = "LicenseRef-ElimuNasi-Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.35"
mogwai = "0.3.6"
wee_alloc = "0.4.5"
console_log = "0.2.0"
log = "0.4.11"
console_error_panic_hook = "0.1.6"

[dependencies.wasm-bindgen]
version = "0.2.69"
features = [
  "serde-serialize",
]

[dependencies.web-sys]
version = "0.3.46"
features = [
  "History",
  "Location",
  "MouseEvent",
  "Window",
  "HtmlInputElement",
  "HashChangeEvent",
]


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
